# rplt

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: display.rs  eval.rs  expr_parser.rs  lib.rs  main.rs  table.rs  token_parser.rs
tests/: eval_tests.rs  expr_parser_tests.rs  parser.rs  token_parser_tests.rs
